--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-icons": "^0.7.1",
     "react-native-maps": "^0.23.0",
-    "react-navigation": "^3.0.9"
+    "react-native-vector-icons": "^6.4.1",
+    "react-navigation": "^3.0.9",
+    "rnpm": "^1.9.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
