--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-animatable": "^1.3.2",
     "react-native-collapsible": "^1.4.0",
     "react-native-debugger": "^1.1.0",
     "react-native-icons": "^0.7.1",
