--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "date-fns": "^1.30.1",
     "expo": "^32.0.0",
     "react": "16.5.0",
+    "react-multiselect-checkboxes": "^0.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
     "react-native-collapsible": "^1.4.0",
     "react-native-debugger": "^1.1.0",
     "react-native-icons": "^0.7.1",
     "react-native-maps": "^0.23.0",
+    "react-native-multiple-select": "^0.5.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.0.9",
     "rnpm": "^1.9.0"
