--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "date-fns": "^1.30.1",
-    "expo": "^32.0.0",
-    "react": "16.5.0",
+    "expo": "^37.0.4",
     "react-multiselect-checkboxes": "^0.1.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
     "react-native-collapsible": "^1.4.0",
     "react-native-debugger": "^1.1.0",
@@ -24,12 +22,19 @@
     "react-native-maps": "^0.23.0",
     "react-native-multiple-select": "^0.5.0",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.0.9",
+    "react-navigation": "^4.0.0",
     "rnpm": "^1.9.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0",
+    "core-js": "^3.6.4",
+    "jest-expo": "^37.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native": "^0.62.1",
+    "react-native-web": "^0.12.2",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.5",
     "redux-devtools": "^3.5.0"
   },
   "private": true
